# kohonen

./: .env.example  .gitignore  Delivering Business Value with ML at NZ Post  .pptx  -  Repaired.pptx  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-demos.txt
.cursor/rules/: kohonen-general-rule.mdc
examples/comparison/: 01_vectorization_comparison.py  02_batch_processing_memory.py  03_mlflow_integration.py  04_fastapi_integration.py  05_env_config_integration.py  Dockerfile.example  best_model_info.json  docker-compose.example.yml  example.env  memory_calculator.py  model_comparison.csv
original_files/: kohonen.ipynb
src/kohonen/: __init__.py  api.py  config.py  mlflow_utils.py  model_selection.py  som.py  visualization.py
src/kohonen/scripts/: __init__.py  api_script.py  inspect_mlflow.py  test_script.py  train_script.py
